--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
+        {% block js %}{% endblock %}
+
+
     </head>
     <body>
         {% block body %}{% endblock %}
