--- a/templates/track/new.html.twig
+++ b/templates/track/new.html.twig
@@ -6,8 +6,8 @@
     <h1>Create new Track</h1>
 
     {{ include('track/_form.html.twig') }}
-    <select id="same-style">
-        <h2>Artiste du même style </h2>
+    <label for="artiste">Artiste</label>
+    <select id="artiste">
     </select>
 
     <a href="{{ path('track_index') }}">back to list</a>
@@ -19,21 +19,14 @@
             .then(function(data) {
                 console.log(data.data);
                 for (let art of data.data) {
-                    $('#same-style').append(`<option value="${art.id}"><a href="${art.href}"> ${art.name} </a></option>`);
+                    $('#artiste').append(`<option value="${art.id}"><a href="${art.href}"> ${art.name} </a></option>`);
                 }
-                // $('#track_artiste').change(function () {
-                //     $('#same-style').val(data.data[$('#track_artiste').val()-1].name);
-                // });
-                $('#same-style').change(function () {
-                    $('#track_artiste').val(data.data[$('#same-style').val()-1].id);
+
+                $('#artiste').change(function () {
+                    $('#track_artiste').val(data.data[$('#artiste').val()-1].id);
                 });
             })
             .catch(error => console.log(error));
 
-        let i;
-        // $('#track_artiste').change(function () {
-        //     $('#same-style').val(data.data[$('#track_artiste').val()].name);
-        // });
-        console.log(i);
     </script>
 {% endblock %}
