--- a/templates/album/show.html.twig
+++ b/templates/album/show.html.twig
@@ -8,28 +8,43 @@
 
     <table class="table">
         <tbody>
+        {% if is_granted('ROLE_ADMIN') %}
             <tr>
                 <th>Id</th>
                 <td>{{ album.id }}</td>
             </tr>
+        {% endif %}
             <tr>
                 <th>Name</th>
                 <td>{{ album.name }}</td>
             </tr>
             <tr>
                 <th>Picture</th>
-                <td><img src="/image/{{ album.picture | raw }}" /></td>
+                <td><img src="/image/{{ album.picture | raw }}"  alt="image de l'album"/></td>
             </tr>
             <tr>
                 <th>Artist</th>
-                <td><a href="/artiste/{{ album.artiste }}" target="_blank">{{ artiste.name }}</a></td>
+                <td><a href="/artiste/{{ artiste.id }}">{{ artiste.name }}</a></td>
             </tr>
+            {% if tracks %}
+                <tr>
+                    <th>Morceaux</th>
+                    <td>
+                        {% for track in tracks %}
+                            <p><a href="{{ path('artiste_album_track', {'id': artiste.id, 'album': album.id, 'track': track.id}) }}">{{ track.name }}</a></p>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% endif %}
         </tbody>
     </table>
 
-    <a href="{{ path('album_index') }}">back to list</a>
+    <a href="{{ path('artiste_show', {'id': artiste.id}) }}">back to artist</a>
 
-    <a href="{{ path('album_edit', {'id': album.id}) }}">edit</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('album_index') }}">back to list</a>
+        <a href="{{ path('album_edit', {'id': album.id}) }}">edit</a>
 
-    {{ include('album/_delete_form.html.twig') }}
+        {{ include('album/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
