--- a/templates/artiste/index.html.twig
+++ b/templates/artiste/index.html.twig
@@ -24,7 +24,9 @@
                 <td>{{ artiste.style }}</td>
                 <td>
                     <a href="{{ path('artiste_show', {'id': artiste.id}) }}">show</a>
+                {% if is_granted('ROLE_ADMIN') %}
                     <a href="{{ path('artiste_edit', {'id': artiste.id}) }}">edit</a>
+                {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -34,6 +36,7 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('artiste_new') }}">Create new</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('artiste_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
