--- a/templates/artiste/show.html.twig
+++ b/templates/artiste/show.html.twig
@@ -24,12 +24,32 @@
                 <th>Style</th>
                 <td>{{ artiste.style }}</td>
             </tr>
+            {% if albums %}
+                <tr>
+                    <th>Albums</th>
+                    <td>
+                        {% for album in albums %}
+                            <p><a href="{{ path('artiste_album', {'id': artiste.id, 'album': album.id}) }}">{{ album.name }}</a></p>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% elseif albums is empty and tracks %}
+                <tr>
+                    <th>Morceaux</th>
+                    <td>
+                        {% for track in tracks %}
+                            <p><a href="{{ path('artiste_track', {'id': artiste.id, 'track': track.id}) }}">{{ track.name }}</a></p>
+                        {% endfor %}
+                    </td>
+                </tr>
+            {% endif %}
         </tbody>
     </table>
 
     <a href="{{ path('artiste_index') }}">back to list</a>
+    {% if is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('artiste_edit', {'id': artiste.id}) }}">edit</a>
+        {{ include('artiste/_delete_form.html.twig') }}
+    {% endif %}
 
-    <a href="{{ path('artiste_edit', {'id': artiste.id}) }}">edit</a>
-
-    {{ include('artiste/_delete_form.html.twig') }}
 {% endblock %}
