--- a/templates/artiste/show.html.twig
+++ b/templates/artiste/show.html.twig
@@ -46,7 +46,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('artiste_index') }}">back to list</a>
+    <a href="{{ path('artiste_index') }}">back to list of artist</a>
     {% if is_granted('ROLE_ADMIN') %}
         <a href="{{ path('artiste_edit', {'id': artiste.id}) }}">edit</a>
         {{ include('artiste/_delete_form.html.twig') }}
