--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,8 +8,8 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.username) }}
         {{ form_row(registrationForm.plainPassword) }}
+        {{ form_widget(registrationForm.roles) }}
         {{ form_row(registrationForm.agreeTerms) }}
-
         <button class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
